force-app/main/default/objects/pse__Create_Billing_Documents_Batch_Settings__c/fields/pse__Notifications_Chatter__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, notifications from Create Billing Documents batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
    <inlineHelpText>If selected, notifications from Create Billing Documents batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
    <label>Notifications by Chatter</label>
    <type>Checkbox</type>
</CustomField>