force-app/main/default/objects/pse__Create_Billing_Documents_Batch_Settings__c/fields/pse__Notifications_Recipients__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Recipients__c</fullName>
    <description>Specifies the notification recipients for Create Billing Documents batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</description>
    <inlineHelpText>Specifies the notification recipients for Create Billing Documents batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</inlineHelpText>
    <label>Notification Recipients</label>
    <type>TextArea</type>
</CustomField>